--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,8 +25,8 @@ if (NOT OGREDEPS_RUNTIME_OUTPUT)
   set(OGREDEPS_RUNTIME_OUTPUT ${OGREDEPS_BINARY_DIR}/bin)
 endif ()
 if (WIN32 OR (APPLE AND NOT OGRE_BUILD_PLATFORM_APPLE_IOS))
-  set(OGREDEPS_RELEASE_PATH "/Release")
-  set(OGREDEPS_DEBUG_PATH "/Debug")
+  set(OGREDEPS_RELEASE_PATH "")
+  set(OGREDEPS_DEBUG_PATH "")
 else ()
   set(OGREDEPS_RELEASE_PATH "")
   set(OGREDEPS_DEBUG_PATH "")
