--- a/src/Cg/CMakeLists.txt
+++ b/src/Cg/CMakeLists.txt
@@ -13,13 +13,13 @@ if (WIN32)
     set(Cg_LIBRARY_REL "${Cg_SOURCE_DIR}/lib/cg.lib" CACHE PATH "" FORCE)
     set(Cg_LIBRARY_DBG "${Cg_SOURCE_DIR}/lib/cg.lib" CACHE PATH "" FORCE)
   endif ()
-  install(FILES ${CG_DLL} DESTINATION bin/Release)
-  install(FILES ${CG_DLL} DESTINATION bin/Debug)
+  install(FILES ${CG_DLL} DESTINATION bin)
+  install(FILES ${CG_DLL} DESTINATION bin)
   if (MINGW)
     file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT})
   else ()
-    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT}/Debug)
-    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT}/Release)
+    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT})
+    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT})
   endif ()
 elseif (APPLE AND NOT OGRE_BUILD_PLATFORM_APPLE_IOS)
   add_custom_target(Cg COMMAND 
@@ -45,11 +45,11 @@ if (OGREDEPS_INSTALL_DEV)
   if (WIN32)
     # install the correct lib
     if (OGREDEPS_PLATFORM_X64)
-      install(FILES lib64/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY}/Debug)
-      install(FILES lib64/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY}/Release)
+      install(FILES lib64/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY})
+      install(FILES lib64/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY})
     else ()
-      install(FILES lib/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY}/Debug)
-      install(FILES lib/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY}/Release)
+      install(FILES lib/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY})
+      install(FILES lib/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY})
     endif ()
   endif ()
 endif ()
